fix: wrap css

--- a/src/pages/Skills/index.css
+++ b/src/pages/Skills/index.css
@@ -47,6 +47,9 @@
     width: 1440px;
     height: 900px;
   }
+  .MySkillsH1 {
+    font-size: 30px;
+  }
 }
 @media screen and (max-width: 768px) and (max-height: 1024px) {
   .containerAllSkills {
@@ -61,5 +64,8 @@
     height: 100px;
     width: 100px;
     margin: 2%;
+  }
+  .MySkillsH1 {
+    font-size: 20px;
   }
 }
